# local-llm-obsedian-rag

./: .gitignore  main.py  pyproject.toml
app/: main.py
backend/: config.py  main.py  vector_db.py
config/: config.example.yaml
data/: data_loader.py
test/: test_main.py
