[project]
name = "local-llm-obsedian-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "httpx>=0.28.1",
    "inngest>=0.5.15",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "streamlit>=1.54.0",
]
