[project]
name = "local-llm-obsedian-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.33,<1",
    "fastapi[standard]>=0.128.6",
    "flagembedding>=1.3.0",
    "httpx>=0.28.1",
    "inngest>=0.5.15",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "llama-index-core>=0.14.15",
    "llama-index-readers-file>=0.5.6",
    "ollama>=0.6.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "streamlit>=1.54.0",
    "tokenizers<0.21",
    "transformers==4.44.2",
]
